--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.11.0",
     "express": "^4.11.2",
-    "express-session": "^1.10.2"
+    "express-session": "^1.10.2",
+    "sqlite3": "^3.0.4"
   }
 }
